<resources>
    <string name="app_name">Slash</string>
    <string name="play_button">Play</string>
    <string name="direction_up">Up</string>
    <string name="direction_up_left">Up left</string>
    <string name="direction_up_right">Up right</string>
    <string name="direction_left">Left</string>
    <string name="direction_right">Right</string>
    <string name="direction_down_left">Down left</string>
    <string name="direction_down_right">Down right</string>
    <string name="direction_down">Down</string>
    <string name="direction_none">None</string>
    <string name="game_start">Start</string>
    <string name="game_score">Score: %1$d</string>
    <string name="colorblind_button_toggle">Colorblind Mode</string>
    <string name="game_over_text">Game Over</string>
    <string name="back_to_welcome">Main Menu</string>
    <string name="regular_arrow_instructions">Swipe blue arrows!</string>
    <string name="reverse_arrow_instructions">Swipe green arrows backwards!</string>
    <string name="not_arrow_instructions">Don\'t swipe %1$s arrows!</string>
    <string name="how_to_play">How to Play</string>
</resources>
